= master

* Add additional_view_directories plugin, for checking multiple view directories for templates (jeremyevans) (#229)

= 3.52.0 (2022-01-14)

* Fix return value of Roda.freeze when multi_route plugin is used (jeremyevans) (#240)

* Use faster OpenSSL::Digest instead of Digest for assets plugin SRI support (jeremyevans)

* Drop development dependency on haml (jeremyevans)

* Make the path method in the path plugin handle blocks that accept keyword arguments in Ruby 3+ (adam12) (#227)

* Support typecast_params :date_parse_input_handler plugin option for handling input to date parsing methods (jeremyevans)

= 3.51.0 (2021-12-15)

* Avoid method redefinition warning in error_handler plugin in verbose warning mode (jeremyevans)

* Allow run in multi_run plugin to be called without an app to remove existing handler (jeremyevans)

* Allow route in named_routes plugin to be called without a block to remove existing handler (jeremyevans)

= 3.50.0 (2021-11-12)

* Add capture_erb plugin for capturing ERB template blocks, instead of injecting them into the template output (jeremyevans)

* Add inject_erb plugin for injecting content directly into ERB template output (jeremyevans)

* Allow hash_branch and hash_path in hash_routes plugin to be called without a block to remove existing handler (jeremyevans)

= 3.49.0 (2021-10-13)

* Switch block_given? to defined?(yield) (jeremyevans)

* Automatically optimize remaining r.is/r.get/r.post calls with a single argument (jeremyevans)

= 3.48.0 (2021-09-13)

* Extract named_routes plugin from multi_route plugin (jeremyevans)

= 3.47.0 (2021-08-13)

* Automatically optimize remaining r.on calls with a single argument (jeremyevans)

= 3.46.0 (2021-07-12)

* Automatically optimize r.on/r.is/r.get/r.post methods with a single string, String, Integer, or regexp argument (jeremyevans)

= 3.45.0 (2021-06-14)
